compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_literal-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := ''"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..7): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..7): []
        Assign@(FileId(1), 0..7)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
error in file FileId(1) at 5..7: invalid char literal
| error in file FileId(1) for 5..6: no characters in literal

