compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_literal-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := '"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..6): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..6): []
        Assign@(FileId(1), 0..6)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
error in file FileId(1) at 5..6: invalid char literal
| error in file FileId(1) for 5..6: missing terminator character

