compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_literal.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 'abcd💖'"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..15): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..15): []
        Assign@(FileId(1), 0..15): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..15): CharSeq("abcd💖")

