compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_seq_escapes-17.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"\\0o\""

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..10): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..10): []
        Assign@(FileId(1), 0..10)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..10): String("\u{0}o")

